[tool.poetry]
name = "pygame-framework"
version = "0.1.0"
description = "Class-based pygame framework for simplified view-switching."
authors = ["mrgallo <daniel.gallo@ycdsbk12.ca>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pygame = "^2.1.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
